[project]
name = "computer-networks-ma3105"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "dnspython>=2.8.0",
    "dotenv>=0.9.9",
    "ldap3>=2.9.1",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
]
